Fixed Materialize letter spacing error found on W3C CSS Validator

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,10 @@ footer {
     margin-top: 3rem;
 }
 
+.table-of-contents a {
+    letter-spacing: 0.4px;
+}
+
 /* Media Query for Mobile Devices */ 
     @media (max-width: 480px) { 
         .footer-icon {
